--- a/pusat/laporan/list.html
+++ b/pusat/laporan/list.html
@@ -186,7 +186,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"
+                    <a href="../susun/index.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
