--- a/pusat/laporan/upload.html
+++ b/pusat/laporan/upload.html
@@ -97,15 +97,58 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./index.html"
-                        class="flex items-center px-2 py-1.5 text-indigo-600 bg-purple-100 rounded-lg group">
-                        <svg class="w-5 h-5 text-indigo-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                            width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <a href="../susun/index.html"
+                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
+                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
+                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                            viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 14 12 8l8 6M4 8l8-6 8 6M4 20l8-6 8 6" />
+                        </svg>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Penyusunan</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#"
+                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
+                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
+                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                            viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 4v16m8-8H4m8-4h.01M12 16h.01M16 12h.01M8 12h.01" />
+                        </svg>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Perhitungan</span>
+                    </a>
+                </li>
+                <li>
+                    <button type="button" data-dropdown-toggle="dropdown-pelaporan"
+                        class="flex items-center w-full px-2 py-1.5 text-indigo-600 bg-purple-100 rounded-lg transition-colors group">
+                        <svg class="shrink-0 w-5 h-5 text-indigo-600" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M15 4h3a1 1 0 0 1 1 1v15a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h3m0 3h6m-3 5h3m-6 0h.01M12 16h3m-6 0h.01M10 3v4h4V3h-4Z" />
                         </svg>
-                        <span class="ms-3">Laporan RTKN</span>
-                    </a>
+                        <span class="flex-1 ms-3 whitespace-nowrap text-left">Pelaporan</span>
+                        <svg class="w-3 h-3 transition-transform rotate-180 dropdown-arrow" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 1 4 4 4-4" />
+                        </svg>
+                    </button>
+                    <ul id="dropdown-pelaporan" class="py-2 space-y-2">
+                        <li>
+                            <a href="./index.html"
+                                class="flex items-center w-full px-2 py-1.5 text-gray-500 transition-colors rounded-lg pl-11 hover:bg-purple-100 hover:text-indigo-600">
+                                Dashboard RTK
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./list.html"
+                                class="flex items-center w-full px-2 py-1.5 text-gray-500 transition-colors rounded-lg pl-11 hover:bg-purple-100 hover:text-indigo-600">
+                                Daftar RTKN
+                            </a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="../support/help.html"
